<resources>
    <string name="app_name">Lab2Andriod</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="product_type">Product Type</string>
    <string name="listview1">listview1</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="total">Total</string>
    <string name="buy">BUY</string>
    <string name="quantity">Quantity</string>
    <string name="quantity1">Quantity</string>
    <string name="Price">20.44</string>
    <string name="pants">Pants</string>
    <string name="Price_pants">20.44</string>
    <string name="Qty_pants">10</string>
    <string name="_10">10</string>
</resources>